--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,1 +1,6 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+body
+{
+    font-family: 'Roboto', sans-serif;;
+}
