--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+:root
+{
+    --bodycolor: rgb(27, 27, 27);
+    --textcolor:rgb(248, 248, 248);
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
