--- a/frontend/src/assets/css/Dashboard.css
+++ b/frontend/src/assets/css/Dashboard.css
@@ -13,7 +13,20 @@
 {
     width: 25%;
     min-width: 250px;
-    height: 95%;
+    height: 93%;
     margin-right: 10px;
+    padding: 20px 30px;
     /* border-right: 1px dashed var(--textcolor); */
+}
+
+.cont
+{
+    align-self: flex-start;
+    padding: 20px;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    max-height: 90%;
+    border-radius: 10px;
+    overflow: scroll;
 }
