--- a/frontend/src/assets/css/Dashboard.css
+++ b/frontend/src/assets/css/Dashboard.css
@@ -11,11 +11,12 @@
 
 .side-nav
 {
-    width: 25%;
+    width: 20%;
     min-width: 250px;
     height: 93%;
     margin-right: 10px;
     padding: 20px 30px;
+    padding-left: 50px;
     /* border-right: 1px dashed var(--textcolor); */
 }
 
@@ -23,10 +24,11 @@
 {
     align-self: flex-start;
     padding: 20px;
-    width: 70%;
+    margin-right: 20px;
+    width: 75%;
     display: flex;
     flex-direction: column;
-    max-height: 90%;
+    max-height: 92%;
     border-radius: 10px;
     overflow: scroll;
 }
