--- a/frontend/src/assets/css/Sidenav.css
+++ b/frontend/src/assets/css/Sidenav.css
@@ -5,6 +5,8 @@
     width: 100%;
     position: relative;
     height: 100%;
+    position: relative;
+
 }
 
 .navhead
@@ -61,4 +63,40 @@
     text-decoration: none;
     width: 73%;
     min-width: 250px;
+}
+
+.sidenavIcons
+{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin-right: auto;
+    width: 100%;
+    margin-top: auto;
+    margin-bottom: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: row;
+}
+
+.sidenav-moon
+{
+    position:static;
+}
+
+.delete-all
+{
+    padding: 4px;
+    font-size: 1.7em;
+    margin: 0px 10px;
+    margin-left: 30px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.delete-all:hover
+{
+    transform: scale(1.3);
+    transition: 0.3s;
 }
