--- a/frontend/src/assets/css/LandingPage.css
+++ b/frontend/src/assets/css/LandingPage.css
@@ -7,7 +7,7 @@
 
 body 
 {
-    max-height: 100vh;
+    /* max-height: 100vh; */
     min-height: 100vh;
     margin: 0;
     padding: 0;
@@ -28,6 +28,7 @@ body
     flex-direction: row;
     height: 80vh;
     position: relative;
+    margin-top: 10vh;
 }
 .lbox
 {
