--- a/frontend/src/assets/css/Notes.css
+++ b/frontend/src/assets/css/Notes.css
@@ -130,6 +130,16 @@ small
     animation: disappear 0.3s ease-in-out;
 }
 
+.backdrop
+{
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+}
+
 .expanded
 {
     position: absolute;
