--- a/frontend/src/assets/css/Notes.css
+++ b/frontend/src/assets/css/Notes.css
@@ -41,6 +41,7 @@
   align-items: center;
   justify-content: space-between;
   margin-top: 10px;
+  scrollbar-width: none; /* Firefox 64 */
 }
 
 small {
@@ -56,7 +57,8 @@ small {
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   max-height: 100%;
   border-radius: 10px;
-  overflow: scroll;
+  /* overflow: scroll; */
+  scrollbar-width: none; /* Firefox 64 */
 }
 
 .addnote textarea,
