Change font-size of title and tag line

--- a/frontend/src/assets/css/LandingPage.css
+++ b/frontend/src/assets/css/LandingPage.css
@@ -134,4 +134,10 @@ img.wednesday {
   .notes-image {
     width: 70% !important;
   }
+  .notefy-heading {
+    font-size: 12vw;
+  }
+  .crafted {
+    font-size: 1rem;
+  }
 }
