--- a/frontend/src/assets/css/Dashboard.css
+++ b/frontend/src/assets/css/Dashboard.css
@@ -76,3 +76,19 @@
   }
 }
 
+@media all and (max-width: 350px){
+  .side-nav{
+    width: 20%;
+    min-width: 250px;
+    height: 93%;
+    margin-right: 10px;
+    padding: 20px 30px;
+    padding-left: 50px;
+    display: none;
+  }
+  .cont {
+    margin: auto;
+    width: 90%;
+  }
+}
+
