--- a/frontend/src/assets/css/Dashboard.css
+++ b/frontend/src/assets/css/Dashboard.css
@@ -5,7 +5,9 @@
   flex-direction: row;
   align-items: center;
 }
-
+.nav-menu{
+  display: none;
+}
 .side-nav {
   width: 20%;
   min-width: 250px;
@@ -60,19 +62,34 @@
   }
 }
 
-@media (min-width: 351px) and (max-width: 600px){
-  .side-nav{
-    width: 20%;
-    min-width: 250px;
+@media all and (max-width: 800px){
+  .side-nav-open{
+    min-width: 100%;
     height: 93%;
     margin-right: 10px;
     padding: 20px 30px;
     padding-left: 50px;
+  }
+  .side-nav{
     display: none;
   }
   .cont {
     margin: auto;
     width: 85%;
+  }
+  .nav-menu{
+    display: block;
+    height: 3rem;
+    width: 3rem;
+    margin-left: 1rem;
+    margin-top: 1rem;
+  }
+  .nav-menu-icon{
+    height: 70%;
+    width: 70%;
+  }
+  .dashboard{
+    overflow-x: hidden;
   }
 }
 
@@ -86,9 +103,11 @@
     padding-left: 50px;
     display: none;
   }
-  .cont {
-    margin: auto;
-    width: 90%;
+}
+
+@media (min-width: 601px) and (max-width: 800px){
+  .cont{
+    margin-top: 0;
   }
 }
 
