--- a/frontend/src/assets/css/Sidenav.css
+++ b/frontend/src/assets/css/Sidenav.css
@@ -6,7 +6,6 @@
     position: relative;
     height: 100%;
     position: relative;
-
 }
 
 .navhead
@@ -100,3 +99,18 @@
     transform: scale(1.3);
     transition: 0.3s;
 }
+
+@media all and (max-height: 600px){
+    .sidenavIcons
+    {
+        margin-bottom: 90px;
+    }
+}
+
+@media (min-height: 600px) and (max-height: 650px){
+    .sidenavIcons
+    {
+        margin-bottom: 150px;
+    }
+}
+
