--- a/frontend/src/assets/css/Settings.css
+++ b/frontend/src/assets/css/Settings.css
@@ -36,9 +36,9 @@
 
 .pfpContainer
 {
-    height: 150px;
-    width: 150px;
-    border-radius: 150px;
+    height: 100px;
+    width: 100px;
+    border-radius: 100px;
     margin: 0 auto;
     overflow: hidden;
    text-align: right;
@@ -46,7 +46,7 @@
 .pfp
 {
     width: 100%;
-    height: 150px;
+    height: 100px;
     object-fit: cover;
     object-position: center;
 }
@@ -54,7 +54,7 @@
 .changeAvatar
 {
     margin-top: 10px;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     cursor: pointer;
 }
 
@@ -64,11 +64,36 @@
     color: var(--yellowcolor);
 }
 
+.controlContainer
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: 30px 0px 20px;
+    width: 75%;
+    padding: 10px 30px;
+    border: 2px dotted rgba(255, 255, 0, 0.589);
+    border-radius: 10px;
+}
+.option
+{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.option input
+{
+    margin: 0px 10px;
+}
+
 .settingsForm
 {
     padding: 0;
     margin: 0;
-    margin-top: 30px;
+    margin-top: 0px;
 }
 
 .settingsForm form
